Fix: Fix side navigation on mobile devices

--- a/src/css/core.game.css
+++ b/src/css/core.game.css
@@ -1,3 +1,4 @@
-#active-game {
+.main-nav .active-game > span,
+.main-nav .active-game {
     display: none;
 }
