--- a/src/css/core.results.css
+++ b/src/css/core.results.css
@@ -1,3 +1,4 @@
-#results-button {
+.main-nav .results-button > span,
+.main-nav .results-button {
     display: none;
 }
