--- a/src/css/zmedia.css
+++ b/src/css/zmedia.css
@@ -2,9 +2,10 @@
     .material nav {
         background-color: transparent !important;
         color: rgba(0,0,0,0.87);
+        box-shadow: none;
     }
     .material nav .brand-logo,
-    .material nav ul a {
+    .material nav ul.main-nav a {
         color: rgba(0,0,0,0.87);
     }
 }
@@ -31,6 +32,7 @@
     .material nav {
         background-color: #3F51B5;
         color: rgba(255,255,255,0.84);
+        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
     }
     #active-game > span,
     #results-button > span,
